[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-scanner"
dynamic = ["version"]
description = "An async Textual TUI for website reconnaissance — DNS, WHOIS, TLS, security, tech-stack and SEO, with no paid APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "iamramizk", email = "59407701+iamramizk@users.noreply.github.com" }
]
keywords = ["recon", "dns", "whois", "tui", "textual", "security", "osint", "website"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "pydig>=0.4.0",
    "textual>=8.2.8",
    "rich>=15.0.0",
    "wappalyzer>=2.0.2",
    "requests>=2.28.2",
    "beautifulsoup4>=4.12.2",
]

[project.urls]
Homepage = "https://github.com/iamramizk/web-scanner"
Repository = "https://github.com/iamramizk/web-scanner"
Issues = "https://github.com/iamramizk/web-scanner/issues"

[project.scripts]
webscan = "webscanner.cli:main"

[tool.hatch.version]
path = "webscanner/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["webscanner"]

[tool.hatch.build.targets.wheel.force-include]
"webscanner/ui/app.tcss" = "webscanner/ui/app.tcss"
"webscanner/ui/data/countries.json" = "webscanner/ui/data/countries.json"
"webscanner/net/data/public_suffix_list.dat" = "webscanner/net/data/public_suffix_list.dat"

[tool.hatch.build.targets.sdist]
include = [
    "/webscanner",
    "/app.py",
    "/README.md",
    "/LICENSE",
    "/requirements.txt",
]
